# rSVD_Kamaneh_Raganato_Terrana

./: .gitignore  Arandom.csv  Brandom.mtx  CMakeLists.txt  Makefile  Notes.md  PM  README.md  mp2  mpi_mat_gen  mpi_norm  mpi_normalize  mpi_transpose  mpi_transpose.cpp  profile_output.txt  sigma.csv
.github/workflows/: ParametricDiffusion1D.yml
PCA/: Makefile  README.md
PCA/include/: JacobiOperations.hpp  JacobiSVD.hpp  Jacobi_Class.hpp  PCA_class.hpp  SVD_class.hpp  SVD_class2.hpp  SVD_class_modified.hpp  class_pca.hpp  class_pca_mpi.hpp
PCA/main/: main.cpp  pca_test_mpi 2.cpp  pca_test_mpi.cpp
PCA/mpi/: mpi_norm.cpp  mpi_transpose.cpp
PCA/python/: plot_tourists_results.py
PCA/src/: JacobiOperations.cpp  JacobiSVD.cpp  Jacobi_Class.cpp  PM.cpp  SVD_class.cpp  SVD_class_modified.cpp  class_pca.cpp  class_pca_mpi.cpp  pca_test.cpp  test
PCA/tests/: SVD_class_test.cpp  athletic_test.cpp  pca_test.cpp  test
POD/: POD.cpp  POD.hpp  draft  test  test.cpp
POD/ParametricDiffusion/: CMakeLists.txt
POD/ParametricDiffusion/src/: ParametricDiffusion.cpp  ParametricDiffusion_snapshot.cpp  Poisson2D.cpp  Poisson2D.hpp  Poisson2D_snapshot.cpp  Poisson2D_snapshot.hpp
POD/ParametricDiffusion1D/: CMakeLists.txt  README.md
POD/ParametricDiffusion1D/input/: test.prm  test_advdiff.prm  test_advdiff_00.prm  test_advdiff_01.prm  test_advdiff_02.prm  test_advdiff_convergence.prm  test_advdiff_convergence2.prm  test_p.txt  test_pod.txt  test_pod_00.txt  test_pod_00_dop.txt  test_pod_01.txt  test_pod_02.txt  test_pod_02_newprm.txt  test_pod_03.txt  test_pod_convergence.txt  test_pod_convergence2.txt  test_pod_convergence3.txt  test_pod_more_prm.txt  test_pod_new_prm.txt  test_pod_one_prm.txt  testa.prm
POD/ParametricDiffusion1D/input_new/: test_advdiff_01.prm  test_advdiff_03.prm  test_pod_00.txt
POD/ParametricDiffusion1D/input_old/: test_advdiff.prm  test_advdiff_00.prm  test_advdiff_02_newprm.prm  test_advdiff_convergence2.prm  test_advdiff_convergence3.prm  test_pod_02.txt  test_pod_03.txt  test_pod_convergence.txt  test_pod_more_prm.txt
POD/ParametricDiffusion1D/output/: errors.mtx  full.mtx  reconstruction.mtx  sigma.txt  test_01.csv
POD/ParametricDiffusion1D/results/test01/: errors_A149_s0.mtx  errors_A149_s1.mtx  errors_A199_s1.mtx  errors_B149_s1.mtx  errors_B199_s1.mtx  errors_B49_s0.mtx  errors_B99_s0.mtx  errors_C149_s1_p1.mtx  errors_C199_s1_p1.mtx  errors_C49_s1_p1.mtx  errors_C99_s1_p1.mtx  sigma_B199_s1.txt  sigma_C199_s1_p1.txt
POD/ParametricDiffusion1D/results/test02/: sigma_trial0.txt  time_n10_every5_trial2.csv  time_n5_every5_trial0.csv  time_n5_every5_trial1.csv
POD/ParametricDiffusion1D/script/: plot_solution.py
POD/ParametricDiffusion1D/scripts/: plot_convergence.py  plot_error_n1.py  plot_singular_values.py  plot_solution.py
POD/ParametricDiffusion1D/src/: AdvDiff1D.cpp  AdvDiff1D.hpp  AdvDiff1D_POD.cpp  AdvDiff1D_POD.hpp  AdvDiff1D_POD_mpi.cpp  AdvDiff1D_POD_old.cpp  Diff1D.cpp  Diff1D_A_one_prm.cpp  Diff1D_B_more_prm.cpp  Diff1D_C_new_prm.cpp  Diff1D_C_new_prm_new.cpp  Diff1D_D_openmp.cpp  Diff1D_convergence.cpp  Diff1D_new_prm.cpp  Diff1D_openmp.cpp  Diffusion1D.hpp  POD.cpp  POD.hpp  POD_new.cpp  POD_new.hpp  ParametricDiffusion1D.cpp  draft  lab-06.cpp  prova
POD/ParametricDiffusion1D_A/: CMakeLists.txt
POD/ParametricDiffusion1D_B/: CMakeLists.txt
POD/ParametricDiffusion1D_C/: CMakeLists.txt
POD/ParametricDiffusion1D_D/: CMakeLists.txt
POD/ParametricDiffusion1D_F/: .CMakeLists.txt.icloud  CMakeLists.txt
POD/common/: cmake-common.cmake
POD/mpi/: mpi_mat_gen.cpp
data/: 00_download_instructions.txt
data/input/: sparse_matrix110.mtx
data/output/: U_n3c5-b4.mtx_output.mtx  V_n3c5-b4.mtx_output.mtx
image_compression/: Doxyfile  Makefile  README.md  analysis 2.txt  analysis.txt  output.dot  pca  pca.cpp
image_compression/include/: PowerMethod.hpp  QR.hpp  SVD.hpp  image_comp.hpp  matrixOperations.hpp  rSVD.hpp
image_compression/main/: main.cpp
image_compression/mpi/: mpi_mat_gen.cpp  mpi_normalize.cpp
image_compression/src/: PM.cpp  PowerMethod.cpp  QR.cpp  SVD.cpp  image_com.cpp  matrixOperations.cpp  rSVD.cpp
image_compression/tests/: QR_test1.cpp  QR_test2.cpp  SVD_test1.cpp  SVD_test2.cpp  (+4 more)
include/: JacobiOperations.hpp  PM.hpp  QR.hpp  SVD_class.hpp  rSVD.hpp
input/: sparse_matrix100.mtx  sparse_matrix160.mtx
src/: JacobiOperations.cpp  Jacobi_Class.cpp  PM.cpp  PM1_omp.cpp  QR.cpp  SVD_omp.cpp  matrixOperations.cpp  rSVD.cpp  rSVD_modified2.cpp
tests/: PM1_omp_elapsed_times.txt  PM1_omp_elapsed_times2.txt  PMTest3  PMTest_omp.cpp  QRTest.cpp  rSVD_test.cpp  rSVD_test2.cpp  rSVD_test_reduced.cpp  rsvd_timing_and_precision_results.csv  sparse.cpp  svd_test.cpp  test
(+146 files in other folders)
